# cpp_for_cv

./: .gitignore  README.md
igg_image/: cmd.txt
igg_image/src/igg_image/: CMakeLists.txt  image.cpp  image.h
